# PiratePlatformer

./: .gitignore  CMakeLists.txt  README.md
src/: audio.c  audio.h  background.c  background.h  camera.c  camera.h  entity.c  entity.h  files.c  files.h  game.c  game.h  level.c  level.h  main.c  map.c  map.h  particles.c  particles.h  paths.h  resources.c  resources.h  tile.c  tile.h  ui.c  ui.h
